Wed Sep  4 14:42:28 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_fast_checkout): If tracing, output a message.  If
	noexec, and workfile is not NULL, just return immediately.  Assert
	that sout is RUN_TTY or workfile is NULL, rather than using it as
	a conditional.  Replace found variable with two variables--gothead
	and keywords--reflecting what it actually means.

	* rcs.c (RCS_fast_checkout): Don't handle the case of workfile set
	to "".
	* rcscmds.c (RCS_checkout): Likewise.
	* checkin.c (Checkin): Pass explicit file name, not "", to
	RCS_fast_checkout.
	* update.c (join_file): Likewise.
	* commit.c (remove_file): Pass explicit file name to
	RCS_fast_checkout and RCS_checkin.

	* rcs.c (RCS_reparsercsfile): Always continue after seeing
	RCSSYMBOLS, even if the value is NULL.  Clear the NODELTA flag
	after setting delta_pos.
	(free_rcsnode_contents): New static function.
	(freercsnode): Call free_rcsnode_contents.
	(RCS_fast_checkout): If NODELTA is set, reparse the RCS file.
	(RCS_settag): New function.  Change all callers to old function.
	(RCS_deltag, RCS_setbranch): Likewise.
	(RCS_lock, RCS_unlock): Likewise.
	(RCS_deltas): If NODELTA is set, reparse the RCS file.
	* rcs.h (NODELTA): Define.
	(RCS_settag, RCS_deltag, RCS_setbranch): Declare.
	(RCS_lock, RCS_unlock): Declare.
	* rcscmds.c (RCS_exec_settag): Rename from RCS_settag.  Don't
	check tag against BASE or HEAD (now done in new RCS_settag).
	(RCS_exec_deltag): Rename from RCS_deltag.
	(RCS_exec_setbranch): Rename from RCS_setbranch.
	(RCS_exec_lock): Rename from RCS_lock.
	(RCS_exec_unlock): Rename from RCS_unlock.
	* cvs.h: Update declarations of renamed functions.
	* checkin.c (Checkin): Remove rcscopy variable (no longer needed
	because of change in RCS_unlock call).
	* commit.c: Include <assert.h>.
	(remove_file): Update RCSNode path if the file is renamed.
	(unblockrcs): Change rcs parameter to RCSNode.  Change all
	callers.
	(fixbranch): Likewise.