@@ -364,9 +364,8 @@ int RCS_exec_setbranch PROTO((const char *, const char *));
 int RCS_exec_lock PROTO((const char *, const char *, int));
 int RCS_exec_unlock PROTO((const char *, const char *, int));
 int RCS_merge PROTO((const char *, const char *, const char *, const char *));
-int RCS_checkout PROTO ((char *rcsfile, char *workfile, char *tag,
-			 char *options,
-                         char *sout, int flags));
+int RCS_exec_checkout PROTO ((char *rcsfile, char *workfile, char *tag,
+			      char *options, char *sout, int flags));
 /* Flags used by RCS_* functions.  See the description of the individual
    functions for which flags mean what for each function.  */
 #define RCS_FLAGS_FORCE 1
