@@ -954,9 +954,9 @@ checkout_file (finfo, vers_ts, adding)
 	    }
 	}
 
-	status = RCS_fast_checkout (vers_ts->srcfile,
-				    pipeout ? NULL : finfo->file, vers_ts->vn_tag,
-				    vers_ts->options, RUN_TTY, 0);
+	status = RCS_checkout (vers_ts->srcfile,
+			       pipeout ? NULL : finfo->file, vers_ts->vn_tag,
+			       vers_ts->options, RUN_TTY, 0);
     }
     if (file_is_dead || status == 0)
     {
@@ -1122,9 +1122,8 @@ patch_file (finfo, vers_ts, docheckout, file_info, checksum)
     if (noexec)
 	retcode = 0;
     else
-	retcode = RCS_fast_checkout (vers_ts->srcfile, NULL,
-				     vers_ts->vn_user,
-				     vers_ts->options, file1, 0);
+	retcode = RCS_checkout (vers_ts->srcfile, NULL, vers_ts->vn_user,
+				vers_ts->options, file1, 0);
     if (retcode != 0)
         fail = 1;
     else
@@ -1149,9 +1148,9 @@ patch_file (finfo, vers_ts, docheckout, file_info, checksum)
            can get the right modes into *FILE_INFO.  We can't check it
            out directly into file2 because co doesn't understand how
            to do that.  */
-	retcode = RCS_fast_checkout (vers_ts->srcfile, finfo->file,
-				     vers_ts->vn_rcs,
-				     vers_ts->options, RUN_TTY, 0);
+	retcode = RCS_checkout (vers_ts->srcfile, finfo->file,
+				vers_ts->vn_rcs,
+				vers_ts->options, RUN_TTY, 0);
 	if (retcode != 0)
 	    fail = 1;
 	else
@@ -1773,8 +1772,8 @@ join_file (finfo, vers)
     {
 	int retcode;
 	/* The file is up to date.  Need to check out the current contents.  */
-	retcode = RCS_fast_checkout (vers->srcfile, finfo->file,
-				     vers->vn_user, NULL, RUN_TTY, 0);
+	retcode = RCS_checkout (vers->srcfile, finfo->file,
+				vers->vn_user, NULL, RUN_TTY, 0);
 	if (retcode != 0)
 	    error (1, retcode == -1 ? errno : 0,
 		   "failed to check out %s file", finfo->fullname);
